--- a/Simulations/Dvine fitted to genes for X_Gaussian regression (Vineknockoffs).ipynb
+++ b/Simulations/Dvine fitted to genes for X_Gaussian regression (Vineknockoffs).ipynb
@@ -741,7 +741,7 @@
     "    \n",
     "    for(m in 1:M){\n",
     "        \n",
-    "        set.seed(m) #The seed is adjusted for reproducibility issues in the simulations.\n",
+    "        set.seed(m) #The seed is set for reproducibility.\n",
     "        \n",
     "        #dvine Knockoffs sampling\n",
     "        Xk <- create_dvine_Knockoffs(X, X_dvine_dist = dvine_distributions$X_dvine_dist ,\n",
@@ -812,7 +812,7 @@
     "\n",
     "    for(m in 1:M){\n",
     "        \n",
-    "        set.seed(m) #The seed is adjusted for reproducibility issues in the simulations. \n",
+    "        set.seed(m) #The seed is set for reproducibility. \n",
     "        \n",
     "        #Gaussian Knockoffs copy selection from the list object\n",
     "        Xk <- ls_Xk_norm[[m]]\n",
@@ -864,7 +864,7 @@
     "\n",
     "    for(m in 1:M){\n",
     "        \n",
-    "        #set.seed(m) #The seed is adjusted for reproducibility issues in the simulations.\n",
+    "        set.seed(m) #The seed is set for reproducibility.\n",
     "        \n",
     "        #Gaussian Knockoffs copy selection from the list object\n",
     "        Xk <- ls_Xk_vineknockoffs[[m]]\n",
